Fix shift

--- a/styles.css
+++ b/styles.css
@@ -155,48 +155,52 @@ body {
   box-sizing: border-box;
 }
 
-.dropdown > .dropdown-content {
-  background-color: #fff;
-  color: #333;
-	border-radius: 2px;
+.dropdown > .dropdown-offset {
   position: absolute;
   top: calc(100% + 5px);
   left: 0;
-	display: flex;
-	flex-direction: column;
-  transition: all 0.3s;
-  opacity: 0;
   pointer-events: none;
-  min-width: 250px;
 }
 
-.dropdown-right > .dropdown-content {
+.dropdown-right > .dropdown-offset {
   top: 0;
   left: calc(100% + 5px);
 }
 
-.dropdown-left > .dropdown-content {
+.dropdown-left > .dropdown-offset {
   top: 0;
   left: unset;
   right: calc(100% + 5px);
 }
 
-.dropdown-bottom-left > .dropdown-content {
+.dropdown-bottom-left > .dropdown-offset {
   top: calc(100% + 5px);
   left: unset;
   right: 0;
+}
+
+.dropdown > .dropdown-offset > .dropdown-content {
+  background-color: #fff;
+  color: #333;
+	border-radius: 2px;
+	display: flex;
+	flex-direction: column;
+  transition: opacity 0.3s;
+  opacity: 0;
+  pointer-events: none;
+  min-width: 250px;
 }
 
 .dropdown:hover, .dropdown.active {
   background-color: rgba(0, 0, 0, .15);
 }
 
-.dropdown.active > .dropdown-content {
+.dropdown.active > .dropdown-offset > .dropdown-content {
   pointer-events: all;
   opacity: 1;
 }
 
-.dropdown > .dropdown-content > .item {
+.dropdown > .dropdown-offset > .dropdown-content > .item {
   padding: 5px 10px;
   white-space: nowrap;
   cursor: pointer;
@@ -205,25 +209,25 @@ body {
   transition: all 0.15s;
 }
 
-.dropdown > .dropdown-content > .item:last-child {
+.dropdown > .dropdown-offset > .dropdown-content > .item:last-child {
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
 }
 
-.dropdown > .dropdown-content > .item:first-child {
+.dropdown > .dropdown-offset > .dropdown-content > .item:first-child {
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
 }
 
-.dropdown > .dropdown-content > .item:not(:last-child) {
+.dropdown > .dropdown-offset > .dropdown-content > .item:not(:last-child) {
   border-bottom: solid 1px rgba(0, 0, 0, .1);
 }
 
-.dropdown > .dropdown-content > .item:hover {
+.dropdown > .dropdown-offset > .dropdown-content > .item:hover {
   background-color: rgba(0, 100, 160, .15);
 }
 
-.dropdown > .dropdown-content > .item:active, .dropdown > .dropdown-content > .item.active {
+.dropdown > .dropdown-offset > .dropdown-content > .item:active, .dropdown > .dropdown-content > .item.active {
   background-color: rgba(0, 100, 160, .9);
   color: #fff;
 }
